[tool.poetry]
name = "trader-api"
version = "0.1.0"
description = "A trader project underlying API"
authors = ["Maxim Bilan <bilan@europe.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
requests = "^2.27.1"
yfinance = "^0.1.69"
requests-html = "^0.10.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
